kubernetes/frontend/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: proshop-ui
  namespace: proshop
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: proshop-ui
  template:
    metadata:
      labels:
        app: proshop-ui
        version: v1
    spec:
      containers:
        - name: proshop-ui
          image: 402008821676.dkr.ecr.us-east-2.amazonaws.com/proshop/ui
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
              name: app
      restartPolicy: Always
